# mrfm-intern

./: .gitignore  pyproject.toml
code_it/: AGENTS.md  core_funcs.py  dellog.sh  kill.sh  params.py  params_data.py  plan.md  practice.py  run.sh  run_copy.sh  run_multiple.sh  tail.sh  train.py
code_it/dapt/: run_lora_dapt.sh  train_lora_dapt.py
code_it/datawrapper/: datawrapper.py  warpper_utils.py
code_it/model/: listfm_downstream_recon.py  listfm_it.py
code_it/visualize/: 10_graph.ipynb  1_open.ipynb  4_metric.ipynb  5_dataloader.ipynb  6_inference.ipynb  7_inference.ipynb  8_metric.ipynb  9_multi_step_comparison.ipynb
code_it_ca/: kill.sh  train.py
code_it_ca/datawrapper/: undersampling.py
code_it_ca/model/: listfm_it.py  unet.py
code_it_ca/visualize/: 3_fig_1.ipynb  6_inference.ipynb
code_it_llm/: kill.sh  practice.py
code_it_llm/common/: metric.py
code_it_llm/dapt/: prepare_dapt_data.py  run_lora_dapt.sh
code_it_llm/datawrapper/: datawrapper.py
code_it_llm/visualize/: 1_open.ipynb  6_inference.ipynb
code_it_llm_ca/: check_params.py  core_funcs.py  params.py  practice.py  run.sh
code_it_llm_ca/visualize/: 2_plot.ipynb  (+1 more)
code_it_new/: AGENTS.md  REPORT.md  core_funcs.py  dellog.sh  kill.sh  params.py  params_data.py  practice.py  run.sh  train.py
data_prep/: combine_two_tasks.py  crossmodal.py  datawrapper.py  denoise.py  graph.py  identity.py  longitudinal.py  segmentation.py  segmentation_old.py  slice_cache.py  split.py  undersampling.py  unsplit.py  utils.py  visualize.ipynb  visualize_data.ipynb  visualize_longitudinal_mat.ipynb
(+79 files in other folders)
